# torq-voxel-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: basic_texture.fs  basic_texture.vs
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-release/lib/glad/: Makefile  cmake_install.cmake
build-release/lib/glm/: Makefile  cmake_install.cmake
build-release/lib/noise/: Makefile  cmake_install.cmake
build-release/lib/stb_image/: Makefile  cmake_install.cmake
design/: binary_greedy_meshing_lld.md  block_editing_lld.md  chunk_streaming_cache_region_lld.md  chunk_streaming_pipeline_hld.md  neighbor_aware_meshing_hld.md  player_physics_collision_hld.md  player_physics_collision_lld.md  rendering_runtime_lld.md
include/: chunk_cache.h  chunk_mesh.h  chunk_renderer.h  chunk_streaming.h  chunk_utility.h  chunk_worker.h  mesh.h  model.h  player_controller.h  region_store.h  resource.h  shader.h  texture.h  texture_utility.h  thread_pool.h  thread_safe_queue.h  vertex.h
lib/noise/include/: Noise.hpp
lib/noise/src/: Noise.cpp
src/: generate_data.cpp
src/IO/: camera.cpp  camera.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  screen.cpp  screen.h
src/graphics/: mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/graphics/models/: cube.cpp  cube.h
src/physics/: player_controller.cpp
src/resources/: chunk_cache.cpp  chunk_mesh.cpp  chunk_renderer.cpp  chunk_worker.cpp  region_store.cpp  resource.cpp  thread_pool.cpp
src/worldgen/: worldgen.cpp
